--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -17,7 +17,7 @@
 		
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-					{% if app.user %}Bienvenu {{ app.user.name }}{% else %}Connectez-vous !{% endif %}<span class="caret"></span>
+					{% if app.user %}Bienvenue {{ app.user.name }}{% else %}Connectez-vous !{% endif %}<span class="caret"></span>
 				</a>
 				<ul class="dropdown-menu">
 					{%  if app.user %}			
@@ -74,6 +74,7 @@
 						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
+						<li><a href="{{ path('lignee.admin.list') }}">Liste des lignées</a></li>
 						<li><a href="{{ path('intrigue.list') }}">Intrigues</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 						<li><a href="{{ path('debriefing.list') }}">Debriefings</a></li>
@@ -169,4 +170,5 @@
 			
 		</ul>
 	</div>
-</div>
+  </div>
+</nav>
