--- a/src/LarpManager/Views/admin/personnage/trombine.twig
+++ b/src/LarpManager/Views/admin/personnage/trombine.twig
@@ -17,9 +17,9 @@
 		<div class="header"><h5>Photo actuelle</h5></div>
 
 		{% if personnage.trombineUrl %}		
-			<img src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
+			<img width="160" src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
 		{% else %}
-			<img src="{{ app.request.basepath }}/img/no_trombine.png" />
+			<img width="160" src="{{ app.request.basepath }}/img/no_trombine.png" />
 		{% endif %}
 		
 		<div class="header"><h5>Modifier</h5></div>
