--- a/src/LarpManager/Views/public/personnage/fragment/trombinoscope.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/trombinoscope.twig
@@ -6,10 +6,10 @@
 <div class="thumbnail">
 		{% if participant.personnage.trombineUrl %}
 		<center>
-			<img class="media-object" src="{{ path('personnage.trombine', {'personnage' : participant.personnage.id }) }}" />
+			<img width="200" class="media-object" src="{{ path('personnage.trombine', {'personnage' : participant.personnage.id }) }}" />
 		</center>
 		{% else %}
-			<img class="media-object" src="{{ app.request.basepath }}/img/no_trombine.png" />
+			<img width="200" class="media-object" src="{{ app.request.basepath }}/img/no_trombine.png" />
 		{% endif %}
 		<div class="caption">
 			<p>
