--- a/src/LarpManager/Views/public/personnage/trombine.twig
+++ b/src/LarpManager/Views/public/personnage/trombine.twig
@@ -18,9 +18,9 @@
 		<div class="header"><h5>Votre trombine</h5></div>
 
 		{% if personnage.trombineUrl %}		
-			<img src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
+			<img width="160" src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
 		{% else %}
-			<img src="{{ app.request.basepath }}/img/no_trombine.png" />
+			<img width="160" src="{{ app.request.basepath }}/img/no_trombine.png" />
 		{% endif %}
 		
 		<div class="header"><h5>Modifier votre photo</h5></div>
