--- a/src/LarpManager/Views/public/renom.twig
+++ b/src/LarpManager/Views/public/renom.twig
@@ -101,9 +101,9 @@ li.pin:hover {
 			<li class="pin">
     			<figure  tabindex="0" class="cap-bot">
 	    			{% if personnage.trombineUrl %}
-						<img src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
+						<img width="160" src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
 					{% else %}
-						<img src="{{ app.request.basepath }}/img/no_trombine.png" />
+						<img width="160" src="{{ app.request.basepath }}/img/no_trombine.png" />
 					{% endif %}
 					<figcaption class="menu">
 						<nav class="navbar navbar-default" style="margin-bottom: 0px; border-radius:0;">
