--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -336,11 +336,11 @@
 	  						</div>
 	  					</nav>
 					
-						<div class="panel-body">
+						<div class="thumbnail">
 							{% if personnage.trombineUrl %}
-								<img class="media-object" width="160" src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
+								<img class="media-object" width="200" src="{{ path('personnage.trombine', {'personnage' : personnage.id }) }}" />
 							{% else %}
-								<img class="media-object" width="160" src="{{ app.request.basepath }}/img/no_trombine.png" />
+								<img class="media-object" width="200" src="{{ app.request.basepath }}/img/no_trombine.png" />
 							{% endif %}
 						</div>
 					</div>
