--- a/src/LarpManager/Views/admin/lignee/details.twig
+++ b/src/LarpManager/Views/admin/lignee/details.twig
@@ -56,8 +56,13 @@
                         </div>
                     </div>
                 </nav>
+
+                {% set iconPjConfirmed = '<span title="PJ participant au GN actif">✅</span>' %}
+                {% set iconPjDead = '<span title="Personnage mort">💀</span>' %}
+                {% set iconPnj = '<span title="PNJ">🎭</span>' %}
+                {% set iconPjOld = '<span title="Ancien PJ ne participant pas au GN actif">➖</span>' %}
+
                 <div class="panel-body">
-                    {# <a href="{{ path('lignee.admin.addMembre', {'lignee': lignee.id}) }}">Ajouter un membre</a> #}
                     <table class="table table-striped table-bordered table-condensed">
                         <th>ID</th>
                         <th>Nom</th>
@@ -65,17 +70,17 @@
                         <th>Statut</th>
                         <th>Parent 1</th>
                         <th>Parent 2</th>
+                        <th>Groupe</th>
                          {% for personnageLignee in lignee.personnageLignees %}
                              <tr>
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.personnage.id}) }}">{{ personnageLignee.personnage.id }}</a> </td>
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.personnage.id}) }}">{{ personnageLignee.personnage.nom}}</a></td>
                                  <td>{{ personnageLignee.personnage.ageReel }} ans</td>
 
-                                 {% if personnageLignee.personnage.vivant == true %}
-                                    <td>vivant.e</td>
-                                 {% else %}
-                                    <td>décédé.e</td>
-                                 {% endif %}
+                                 <td>   {% if personnageLignee.personnage.vivant == 0 %}{{ iconPjDead | raw }}
+                                        {% elseif personnageLignee.personnage.isPnj() %}{{ iconPnj | raw }}
+                                        {% else %}{{ iconPjOld | raw }}{% endif %}
+                                        {%if personnageLignee.personnage.isLastParticipantOnActiveGn() %}<span class="">{{ iconPjConfirmed | raw }}{% endif %}</span></td>
 
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent1.id}) }}">{{ personnageLignee.parent1.nom }}</a></td>
                                  {% if personnageLignee.parent2 == NULL %}
@@ -83,11 +88,19 @@
                                  {% else %}
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent2.id}) }}">{{ personnageLignee.parent2.nom }}</a></td>
                                  {% endif %}
+
+                                 {% if personnageLignee.personnage.groupe == NULL %}
+                                 <td> - </td>
+                                 {% else %}
+                                 <td><a href="{{ path('groupe.detail',{'index':personnageLignee.personnage.groupe.id}) }}">{{ personnageLignee.personnage.groupe.nom }}</a> </td>
+                                 {% endif %}
                              </tr>
                         {% endfor %}
                     </table>
+
+                    <div class="legend"><span class="legend-header">Légende Statut : </span>{{ iconPjConfirmed | raw }} = PJ Actif, {{ iconPnj | raw }} = PNJ, {{ iconPjOld | raw }} = PJ Non actif, {{ iconPjDead | raw }} = Mort</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 {% endblock %}
