Ajout action ajout de lignée.

--- a/src/LarpManager/Views/admin/lignee/details.twig
+++ b/src/LarpManager/Views/admin/lignee/details.twig
@@ -57,7 +57,7 @@
                     </div>
                 </nav>
                 <div class="panel-body">
-                    {# <a href="{{ path('lignee.admin.addMembre', {'lignee': lignee.id}) }}">Ajouter un membre</a> #}
+                    {#TODO : <a href="{{ path('lignee.admin.addMembre', {'lignee': lignee.id}) }}">Ajouter un membre</a> #}
                     <table class="table table-striped table-bordered table-condensed">
                         <th>ID</th>
                         <th>Nom</th>
