--- a/src/LarpManager/Views/admin/lignee/details.twig
+++ b/src/LarpManager/Views/admin/lignee/details.twig
@@ -26,15 +26,7 @@
                         </div>
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                        Action
-                                        <span class="caret"></span>
-                                    </a> <ul class="dropdown-menu">
-                                        <li><a href="{{ path('lignee.admin.update', {'lignee':lignee.id}) }}">Modifier {{ lignee.nom }}</a></li>
-                                        <li><a href="{{ path('lignee.admin.delete', {'lignee':lignee.id}) }}">Supprimer {{ lignee.nom }}</a></li>
-                                    </ul>
-                                </li>
+                                    <li><a href="{{ path('lignee.admin.update', {'lignee':lignee.id}) }}">Modifier/Supprimer</a></li>
                             </ul>
                         </div>
                     </div>
