--- a/src/LarpManager/Views/public/priere/detail.twig
+++ b/src/LarpManager/Views/public/priere/detail.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Prière {{priere.label }}{% endblock title %}
+{% block title %}Prière {{ priere.label }}{% endblock title %}
 
 {% block content %}
 
@@ -17,10 +17,10 @@
 		<h5>{{ priere.sphere.label }} - Niveau {{ priere.niveau }} ({{ priere.label }})</h5>
 	</div>
 		
-<object type="application/pdf" width="100%" height="1200px" >
-	<param name="src" value="{{ path('magie.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}" />
-	<p>Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('magie.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.</p>
-</object>
+	<object type="application/pdf" width="100%" height="1200px" >
+		<param name="src" value="{{ path('participant.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}" />
+		<p>Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.</p>
+	</object>
 
 </div>
 {% endblock content %}
