Improve Accueil display

--- a/src/LarpManager/Views/homepage/index.twig
+++ b/src/LarpManager/Views/homepage/index.twig
@@ -16,58 +16,17 @@
 				{% include 'homepage/fragment/administration.twig' with {'user': user} %}
 			</div>
 		</div>
-		<div class="col-md-9">
-
-			{# affichage des personnages anciens et actuels #}
-
-			<div class="well well-sm">
-				<div class="header">
-					<h5>Vos personnages</h5>
-				</div>
-
-				<ul class="list-group">
-					{% for participant in user.participants %}
-						{% if participant.personnage  %}
-							<li class="list-group-item">
-								<a href="{{ path('gn.detail', {'gn': participant.gn.id}) }}">
-									{{ participant.gn.label }}
-								</a>
-								<a href="{{ path('gn.personnage',{'gn': participant.gn.id}) }}">
-									 -{{ participant.personnage.nom }} ({{ participant.personnage.surnom }})
-								</a>
-								{% if participant.groupeGn %}
-									<a href="{{ path('groupeGn.groupe',{'groupeGn':participant.groupeGn.id}) }}">
-										 - {{ participant.groupe.nom }}
-									</a>
-								{% endif %}
-							</li>
-						{% else %}
-							<li class="list-group-item">
-								<a href="{{ path('gn.detail', {'gn': participant.gn.id}) }}">
-									{{ participant.gn.label }}
-								</a> - 	Vous ne possédez pas de personnage pour cet opus.
-								{% if participant.groupeGn%}
-									<a href="{{ path('groupeGn.groupe',{'groupeGn':participant.groupeGn.id}) }}">
-										 - {{ participant.groupe.nom }}
-									</a>
-								{% endif %}
-							</li>
-						{% endif %}
-					{% endfor %}
-				</ul>
-			</div>
-
-			
+		<div class="col-md-9">		
 			{# affichage des événements passé et futur #}
-			
 			<div class="well well-sm">
 				<div class="header">
 					<h5>Vos jeux</h5>
 				</div>
 				
-				{% if not user.hasFuturEvent %}
+				{% if not user.participants %}
 					<p>Vous ne participez à aucun jeu. Nous vous proposons de parcourir la liste des jeux proposés par Eve-Oniris et d'en sélectionner un.</p>
 				{% endif %}
+
 				<ul class="list-group">
 					<li class="list-group-item">
 						<a href="{{ path('gn.list') }}">Voir la liste des jeux</a>
@@ -82,13 +41,23 @@
 	    					{% if participant.billet %}
 	    						<span class="text-success">{{ participant.billet.label }}</span>
 	    					{% else %}
-	    						<span class="text-danger">Un billet est obligatoire pour l'accès au jeu.
+	    						<span class="text-danger">Un billet est obligatoire pour l'accès au jeu : 
 	    						<a href="{{ path('gn.billetterie', {'gn': participant.gn.id}) }}">Billetterie</a>
 	    						</span>
 	    					{% endif %}
 	    				{% else %}
 	    					<span class="text-notice">Le jeu est terminé</span>
 	    				{% endif %}
+						{% if participant.personnage  %}
+							// <a href="{{ path('gn.personnage',{'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} ({{ participant.personnage.surnom }})</a> 
+						{% else %}
+							// Vous n'avez pas de personnage actif pour ce jeu.
+						{% endif %}
+						{% if participant.groupeGn %}
+							- <a href="{{ path('groupeGn.groupe',{'groupeGn': participant.groupeGn.id}) }}">{{ participant.groupeGn.groupe.nom }}</a>
+						{% else %}
+							- <a href="{{ path('participant.groupe.join', {'participant': participant.id}) }}"><i class="fa fa-users"></i> Rejoindre un groupe</a>
+						{% endif %}
     				</li>
     			{% endfor %}
 				</ul>
