Fonction pour imprimer les personnages actifs d'un GN

--- a/src/LarpManager/Views/gn/detail.twig
+++ b/src/LarpManager/Views/gn/detail.twig
@@ -253,7 +253,7 @@
 					{% if participant.personnage %}
 						<li>
 							<a href="{{ path('gn.personnage', {'gn': gn.id}) }}"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;
-				   				{{ participant.personnage.nom }} {{ participant.personnage.surnom }}&nbsp;--&nbsp;{{ participant.personnage.classeName }}
+				   				{{ participant.personnage.nom }} ({{ participant.personnage.surnom }})&nbsp;--&nbsp;{{ participant.personnage.classeName }}
 				   			</a>
 				   		</li>
 					{% else %}
@@ -279,7 +279,7 @@
 					<strong>Groupe principal :</strong>
 					<ul class="list-group">
 						{% if participant.session %}
-							<li class="list-group-item"><a href="{{ path('groupeGn.groupe', {'groupeGn': participant.session.id}) }}"><i class="fa fa-users"></i> Votre groupe {{ participant.session.groupe.nom }}</a></li>
+							<li class="list-group-item"><a href="{{ path('groupeGn.groupe', {'groupeGn': participant.session.id}) }}"><i class="fa fa-users"></i> {{ participant.session.groupe.nom }}</a></li>
 						{% else %}
 							<li class="list-group-item"><a href="{{ path('participant.groupe.join', {'participant': participant.id}) }}"><i class="fa fa-users"></i> Rejoindre un groupe</a></li>
 						{% endif %}
