--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -18,7 +18,7 @@ table tr td {
 			<tr>
 				<td style="width:33%;">
 					<strong>#{{ personnage.id }}</strong><br />
-					<strong>{{ personnage.nom }} {% if personnage.surnom %}<small> ({{ personnage.surnom }})</small>{% endif %}</strong><br />
+					<strong>{{ personnage.nom }}{% if personnage.surnom %}<small> ({{ personnage.surnom }})</small>{% endif %}</strong><br />
 					Origine : {{ personnage.territoire|default("non définie") }}<br />
 					{{ personnage.classeName }}, {{ personnage.genre }}, <small>{{ personnage.ageReel|default('x') }} ans ({{ personnage.age }})</small><br />
 					{% if personnage.user %}{{ personnage.user.etatCivil.nom }} {{ personnage.user.etatCivil.prenom }}{% else %}Ce personnage n'est pas lié à un joueur{% endif %}. {% if personnage.intrigue %}participe aux intrigues{% else %}ne participe pas aux intrigues{% endif %}	
@@ -78,7 +78,6 @@ table tr td {
 		<tbody>
 			<tr>
 				<td style="text-align: center; width: 33%;">{{ personnage.xp|default(0) }} / {{ personnage.xpTotal }} xp</td>
-
 				<td>
 					{% for personnageReligion in personnage.personnagesReligions %}
 						{{ personnageReligion.religion.label }} - {{ personnageReligion.religionLevel.label }}<br />
@@ -96,8 +95,7 @@ table tr td {
 	<div style="border: 1px solid #000;padding: 5px;">
 	<h3><strong>Compétences</strong></h3>
 	{% for competence in personnage.competences %}
-			<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> :
-			{{ competence.descriptionRaw }}<br />
+		<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> : {{ competence.descriptionRaw }}<br />
 	{% endfor %}
 	</div>
 	
@@ -141,8 +139,8 @@ table tr td {
 					{% endfor %}
 				</td>
 				<td>
-					{% for groupeSecondaire in personnage.secondaryGroups %}
-						{{ groupeSecondaire.label }}<br />
+					{% for membre in personnage.membres %}
+						{{ membre.secondaryGroup }}<br />
 					{% endfor %}
 					
 					{% for postulant in personnage.postulants %}
