--- a/src/LarpManager/Views/admin/lignee/details.twig
+++ b/src/LarpManager/Views/admin/lignee/details.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}{{ lignee.nom }}{% endblock %}
+{% block title %}{#{{ lignee.nom }} #}{% endblock %}
 
 {% block content %}
 
@@ -66,29 +66,46 @@
                         <th>Parent 1</th>
                         <th>Parent 2</th>
                         <th>Groupe</th>
+                        <th>Retirer membre</th>
+
                          {% for personnageLignee in lignee.personnageLignees %}
                              <tr>
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.personnage.id}) }}">{{ personnageLignee.personnage.id }}</a> </td>
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.personnage.id}) }}">{{ personnageLignee.personnage.nom}}</a></td>
                                  <td>{{ personnageLignee.personnage.ageReel }} ans</td>
 
-                                 <td>   {% if personnageLignee.personnage.vivant == 0 %}{{ iconPjDead | raw }}
-                                        {% elseif personnageLignee.personnage.isPnj() %}{{ iconPnj | raw }}
-                                        {% else %}{{ iconPjOld | raw }}{% endif %}
-                                        {%if personnageLignee.personnage.isLastParticipantOnActiveGn() %}<span class="">{{ iconPjConfirmed | raw }}{% endif %}</span></td>
+                                 <td>   {% if personnageLignee.personnage.vivant == 0 %}
+                                            {{ iconPjDead | raw }}
+                                        {% elseif personnageLignee.personnage.isPnj() %}
+                                            {{ iconPnj | raw }}
+                                        {% else %}
+                                            {{ iconPjOld | raw }}
+                                        {% endif %}
+
+                                        {%if personnageLignee.personnage.isLastParticipantOnActiveGn() %}
+                                            <span class="">{{ iconPjConfirmed | raw }}
+                                        {% endif %}</span>
+                                 </td>
 
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent1.id}) }}">{{ personnageLignee.parent1.nom }}</a></td>
+
                                  {% if personnageLignee.parent2 == NULL %}
-                                 <td> - </td>
+                                    <td> - </td>
                                  {% else %}
-                                 <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent2.id}) }}">{{ personnageLignee.parent2.nom }}</a></td>
+                                    <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent2.id}) }}">{{ personnageLignee.parent2.nom }}</a></td>
                                  {% endif %}
 
                                  {% if personnageLignee.personnage.groupe == NULL %}
-                                 <td> - </td>
+                                    <td> - </td>
                                  {% else %}
-                                 <td><a href="{{ path('groupe.detail',{'index':personnageLignee.personnage.groupe.id}) }}">{{ personnageLignee.personnage.groupe.nom }}</a> </td>
+                                    <td><a href="{{ path('groupe.detail',{'index':personnageLignee.personnage.groupe.id}) }}">{{ personnageLignee.personnage.groupe.nom }}</a> </td>
                                  {% endif %}
+
+                                 <td>
+                                     <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Retirer ce membre"
+                                        href="{{ path('lignee.admin.membre.remove',{'membre':personnageLignee.id, 'lignee':lignee.id, 'membreNom':personnageLignee.personnage.nom}) }}">
+                                         <i class="fa fa-unlink"></i></a>
+                                 </td>
                              </tr>
                         {% endfor %}
                     </table>
