--- a/src/LarpManager/Views/public/personnage/fragment/lignee.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/lignee.twig
@@ -5,6 +5,6 @@
 
 <div class="list-group">
 	{% for lignage in personnage.personnageLignee %}
-		  {{ lignage.lignee.nom }}
+		<li class="list-group-item">{{ lignage.lignee.nom }}</li>
 	{% endfor %}
 </div>
