--- a/src/LarpManager/Views/admin/lignee/add.twig
+++ b/src/LarpManager/Views/admin/lignee/add.twig
@@ -6,7 +6,7 @@
 
     <ol class="breadcrumb">
         <li><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li><a href="{{ path("lignee.admin.list") }}">Liste des lignées</a></li>
+        <li><a href="{{ path("lignee.admin.list") }}">Lignées</a></li>
         <li class="active">Ajout d'une lignée</li>
     </ol>
 
