--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -74,7 +74,6 @@
 						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
-						<li><a href="{{ path('lignee.admin.list') }}">Liste des lignées</a></li>
 						<li><a href="{{ path('intrigue.list') }}">Intrigues</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 						<li><a href="{{ path('debriefing.list') }}">Debriefings</a></li>
@@ -83,6 +82,7 @@
 						<li><a href="{{ path('lieu') }}">Lieux</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
 						<li><a href="{{ path('items') }}">Objets</a></li>
+						<li><a href="{{ path('lignee.admin.list') }}">Lignées</a></li>
 					</ul>
 				</li>
 			{% endif %}
