Ajout d'un message de confirmation avant retrait d'un membre d'une lignée.

--- a/src/LarpManager/Views/admin/lignee/details.twig
+++ b/src/LarpManager/Views/admin/lignee/details.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}{#{{ lignee.nom }} #}{% endblock %}
+{% block title %}{{ lignee.nom }}{% endblock %}
 
 {% block content %}
 
@@ -103,7 +103,8 @@
 
                                  <td>
                                      <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Retirer ce membre"
-                                        href="{{ path('lignee.admin.membre.remove',{'membre':personnageLignee.id, 'lignee':lignee.id, 'membreNom':personnageLignee.personnage.nom}) }}">
+                                        href="{{ path('lignee.admin.membre.remove',{'membre':personnageLignee.id, 'lignee':lignee.id, 'membreNom':personnageLignee.personnage.nom}) }}"
+                                            onclick="return confirm('Vous vous apprétez à retirer {{ personnageLignee.personnage.nom }} de cette lignée. Confirmer ?')">
                                          <i class="fa fa-unlink"></i></a>
                                  </td>
                              </tr>
