--- a/src/LarpManager/Views/gn/participants.twig
+++ b/src/LarpManager/Views/gn/participants.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Grandeur nature{% endblock title %}
+{% block title %}{{ gn.label }} Participants{% endblock title %}
 
 {% block content %}
 
@@ -61,8 +61,9 @@
 				<th>Email</th>
 				<th>Billet</th>
 				<th>Restauration</th>
+				<th>Personnage</th>
 				<th>Groupe</th>
-				<th />
+				<th>Actions</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -89,6 +90,13 @@
 						{% endif %}
 					</td>
 					<td>
+						{% if participant.user.personnage %}
+							<a href="{{ path('personnage.admin.detail', {'personnage': participant.user.personnage.id}) }}">{{ participant.user.personnage.nom }}</a>
+						{% else %}
+							<span class="text-danger">Aucun personnage sélectionné</span>
+						{% endif %}
+					</td>
+					<td>
 						{% if participant.groupeGn %}
 							<a href="{{ path('groupe.detail', {'index': participant.groupeGn.groupe.id}) }}">{{ participant.groupeGn.groupe }}</a>
 						{% else %}
@@ -98,7 +106,33 @@
 					<td>
 						<div class="btn-toolbar pull-right" role="toolbar" aria-label="...">
 							<div class="btn-group" role="group" aria-label="...">
-								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Ajouter à un groupe" href="{{ path('participant.groupe',{'participant':participant.id}) }}"><i class="fa fa-users"></i></a>
+
+								{% if participant.user.personnage  %}
+									<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Changer de personnage"
+									   href="{{ path('participant.admin.personnage.old',{'participant':participant.id}) }}">
+										<i class="fa fa-exchange"></i>
+									</a>
+								{% elseif participant.personnage %}
+									<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Sélectionner un ancien personnage"
+									   href="{{ path('participant.admin.personnage.old',{'participant':participant.id}) }}">
+										<i class="fa fa-user"></i>
+									</a>
+								{% elseif participant.groupeGN %}
+									<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Créer un nouveau personnage"
+									   href="{{ path('participant.admin.personnage.new',{'participant':participant.id}) }}">
+										<i class="fa fa-user-plus"></i>
+									</a>
+								{% endif %}
+
+								{% if participant.groupeGN %}
+									<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Changer de groupe"
+									   href="{{ path('participant.groupe',{'participant':participant.id}) }}">
+										<i class="fa fa-sign-out"></i></a>
+								{% else %}
+									<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Ajouter à un groupe"
+									   href="{{ path('participant.groupe',{'participant':participant.id}) }}">
+										<i class="fa fa-users"></i></a>
+								{% endif %}
 								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Choisir le billet" href="{{ path('participant.billet',{'participant':participant.id}) }}"><i class="fa fa-ticket"></i></a>
 								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Modifier le lieu de restauration" href="{{ path('participant.restauration',{'participant':participant.id}) }}"><i class="fa fa-coffee"></i></a>
 								<a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Retirer le participant" href="{{ path('participant.remove',{'participant':participant.id}) }}"><i class="fa fa-close"></i></a>
