--- a/src/LarpManager/Views/gn/participantswithoutperso.twig
+++ b/src/LarpManager/Views/gn/participantswithoutperso.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Grandeur nature{% endblock title %}
+{% block title %}{{ gn.label }} Participants sans personnage{% endblock title %}
 
 {% block content %}
 
@@ -26,7 +26,7 @@
 				<th>Email</th>
 				<th>Billet</th>
 				<th>Groupe</th>
-				<th />
+				<th>Actions</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -48,10 +48,25 @@
 					</td>						
 					<td>
 						{% if participant.groupeGn %}
-						<a href="{{ path('participant.admin.personnage.new', {'participant' : participant.id}) }}">Créer un personnage</a>
-						<a href="{{ path('participant.admin.personnage.old', {'participant' : participant.id}) }}">Récupérer un ancien personnage</a>
+							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Changer de groupe"
+							   href="{{ path('participant.groupe',{'participant':participant.id}) }}">
+								<i class="fa fa-sign-out"></i>
+							</a>
+
+							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Créer un nouveau personnage"
+							   href="{{ path('participant.admin.personnage.new',{'participant':participant.id}) }}">
+								<i class="fa fa-user-plus"></i>
+							</a>
+
+							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Sélectionner un ancien personnage"
+							   href="{{ path('participant.admin.personnage.old',{'participant':participant.id}) }}">
+								<i class="fa fa-user"></i>
+							</a>
 						{% else %}
-						<a href="{{ path('participant.groupe',{'participant':participant.id}) }}">Ajouter à un groupe</a>
+							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Ajouter à un groupe"
+							   href="{{ path('participant.groupe',{'participant':participant.id}) }}">
+								<i class="fa fa-users"></i>
+							</a>
 						{% endif %}
 					</td>
 				</tr>
