--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -208,15 +208,13 @@ table tr td {
 	</div>
 	<hr />
 	<div class="print-center">
-		<p>Si cette partie a été découpée, votre personnage ne plus plus être à l'état de Plein santé, il reste à l'état Blessé au maximum et ce jusqu'à la fin du GN.</p>
+		<p>Si cette partie venait à être détachée, le niveau de santé maximum de votre personnage serait au mieux à l'état Blessé jusqu'à la fin du GN, sans qu'une quelconque compétence ne puisse le faire revenir à l'état de Parfaite Santé.</p>
 	</div>
 	<hr />
 	<div class="print-center">
-		<p>Partie à découper et à remettre au mage responsable de votre ponction vitale.</p>
+		<p>Partie à découper et à remettre à la personne qui vous la demandera.</p>
 		<strong>Numéro du personnage :</strong> #{{ personnage.id }}<br />
-		<strong>Identité du personnage :</strong> {{ personnage.surnom }}<br />
-		<strong>Energie vitale :</strong> {{ personnage.energievitale }}
+		<strong>Valeur :</strong> {{ personnage.energievitale }}
 	</div>
-	
-	
+
 {% endblock content %}
